logs/gbpy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GBpy'...
Compiling './lib/python3.5/site-packages/GBpy/Test_quaternion.py'...
***   File "./lib/python3.5/site-packages/GBpy/Test_quaternion.py", line 17
    print q1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GBpy/bp_basis.py'...
***   File "./lib/python3.5/site-packages/GBpy/bp_basis.py", line 54
    print str1
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GBpy/csl_generators'...
Compiling './lib/python3.5/site-packages/GBpy/csl_generators/csl_dsc_genlattice.py'...
***   File "./lib/python3.5/site-packages/GBpy/csl_generators/csl_dsc_genlattice.py", line 40
    print 'case: ', cnt + 1
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GBpy/csl_generators/genereate_csl_mats.py'...
***   File "./lib/python3.5/site-packages/GBpy/csl_generators/genereate_csl_mats.py", line 53
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GBpy/csl_generators/matlab_csls'...
Listing './lib/python3.5/site-packages/GBpy/csl_generators/prior_lit_csls'...
Listing './lib/python3.5/site-packages/GBpy/csl_generators/python_csls'...
Listing './lib/python3.5/site-packages/GBpy/csl_generators/test_csls'...
Compiling './lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_cubic_cslmats.py'...
***   File "./lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_cubic_cslmats.py", line 87
    print ct1
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_lit_cslmats.py'...
***   File "./lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_lit_cslmats.py", line 236
    print 'matp1 exists in mat_m'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_rhomb_cslmats.py'...
***   File "./lib/python3.5/site-packages/GBpy/csl_generators/test_csls/test_rhomb_cslmats.py", line 132
    print 'matp1 exists in mat_m'
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GBpy/docs'...
Listing './lib/python3.5/site-packages/GBpy/docs/build'...
Listing './lib/python3.5/site-packages/GBpy/docs/build/doctrees'...
Listing './lib/python3.5/site-packages/GBpy/docs/build/html'...
Listing './lib/python3.5/site-packages/GBpy/docs/build/html/_modules'...
Listing './lib/python3.5/site-packages/GBpy/docs/build/html/_sources'...
Listing './lib/python3.5/site-packages/GBpy/docs/build/html/_static'...
Listing './lib/python3.5/site-packages/GBpy/docs/images'...
Listing './lib/python3.5/site-packages/GBpy/docs/source'...
Compiling './lib/python3.5/site-packages/GBpy/find_csl_dsc.py'...
***   File "./lib/python3.5/site-packages/GBpy/find_csl_dsc.py", line 204
    print '*** CSL checks ***'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GBpy/pkl_files'...
Compiling './lib/python3.5/site-packages/GBpy/test_cases.py'...
***   File "./lib/python3.5/site-packages/GBpy/test_cases.py", line 59
    print 'case:', cnt, '\n'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/GBpy/tools.py'...
***   File "./lib/python3.5/site-packages/GBpy/tools.py", line 47
    print a + text + self.ENDC
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/GBpy-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
